out.h

enum
{
    kAudioObjectSystemObject = 1
};
typedef OSStatus
(*AudioObjectPropertyListenerProc)( AudioObjectID inObjectID,
                                    UInt32 inNumberAddresses,
                                    const AudioObjectPropertyAddress* inAddresses,
                                    void* inClientData);
typedef void
(^AudioObjectPropertyListenerBlock)( UInt32 inNumberAddresses,
                                        const AudioObjectPropertyAddress* inAddresses);
enum
{
    kAudioObjectPropertyCreator = 'oplg',
    kAudioObjectPropertyListenerAdded = 'lisa',
    kAudioObjectPropertyListenerRemoved = 'lisr'
};
void AudioObjectShow( AudioObjectID inObjectID);
Boolean AudioObjectHasProperty( AudioObjectID inObjectID,
                        const AudioObjectPropertyAddress* inAddress);
OSStatus AudioObjectIsPropertySettable( AudioObjectID inObjectID,
                                const AudioObjectPropertyAddress* inAddress,
                                Boolean* outIsSettable);
OSStatus AudioObjectGetPropertyDataSize( AudioObjectID inObjectID,
                                const AudioObjectPropertyAddress* inAddress,
                                UInt32 inQualifierDataSize,
                                const void* inQualifierData,
                                UInt32* outDataSize);
OSStatus AudioObjectGetPropertyData( AudioObjectID inObjectID,
                            const AudioObjectPropertyAddress* inAddress,
                            UInt32 inQualifierDataSize,
                            const void* inQualifierData,
                            UInt32* ioDataSize,
                            void* outData);
OSStatus AudioObjectSetPropertyData( AudioObjectID inObjectID,
                            const AudioObjectPropertyAddress* inAddress,
                            UInt32 inQualifierDataSize,
                            const void* inQualifierData,
                            UInt32 inDataSize,
                            const void* inData);
OSStatus AudioObjectAddPropertyListener( AudioObjectID inObjectID,
                                const AudioObjectPropertyAddress* inAddress,
                                AudioObjectPropertyListenerProc inListener,
                                void* inClientData);
OSStatus AudioObjectRemovePropertyListener( AudioObjectID inObjectID,
                                    const AudioObjectPropertyAddress* inAddress,
                                    AudioObjectPropertyListenerProc inListener,
                                    void* inClientData);
OSStatus AudioObjectAddPropertyListenerBlock( AudioObjectID inObjectID,
                                        const AudioObjectPropertyAddress* inAddress,
                                        dispatch_queue_t inDispatchQueue,
                                        AudioObjectPropertyListenerBlock inListener);
OSStatus AudioObjectRemovePropertyListenerBlock( AudioObjectID inObjectID,
                                        const AudioObjectPropertyAddress* inAddress,
                                        dispatch_queue_t inDispatchQueue,
                                        AudioObjectPropertyListenerBlock inListener);
enum
{
    kAudioSystemObjectClassID = 'asys'
};
typedef UInt32 AudioHardwarePowerHint

;
 enum
{
    kAudioHardwarePowerHintNone = 0,
    kAudioHardwarePowerHintFavorSavingPower = 1
};
enum
{
    kAudioHardwarePropertyDevices = 'dev#',
    kAudioHardwarePropertyDefaultInputDevice = 'dIn ',
    kAudioHardwarePropertyDefaultOutputDevice = 'dOut',
    kAudioHardwarePropertyDefaultSystemOutputDevice = 'sOut',
    kAudioHardwarePropertyTranslateUIDToDevice = 'uidd',
    kAudioHardwarePropertyMixStereoToMono = 'stmo',
    kAudioHardwarePropertyPlugInList = 'plg#',
    kAudioHardwarePropertyTranslateBundleIDToPlugIn = 'bidp',
    kAudioHardwarePropertyTransportManagerList = 'tmg#',
    kAudioHardwarePropertyTranslateBundleIDToTransportManager = 'tmbi',
    kAudioHardwarePropertyBoxList = 'box#',
    kAudioHardwarePropertyTranslateUIDToBox = 'uidb',
    kAudioHardwarePropertyClockDeviceList = 'clk#',
    kAudioHardwarePropertyTranslateUIDToClockDevice = 'uidc',
    kAudioHardwarePropertyProcessIsMain = 'main',
    kAudioHardwarePropertyIsInitingOrExiting = 'inot',
    kAudioHardwarePropertyUserIDChanged = 'euid',
    kAudioHardwarePropertyProcessInputMute = 'pmin',
    kAudioHardwarePropertyProcessIsAudible = 'pmut',
    kAudioHardwarePropertySleepingIsAllowed = 'slep',
    kAudioHardwarePropertyUnloadingIsAllowed = 'unld',
    kAudioHardwarePropertyHogModeIsAllowed = 'hogr',
    kAudioHardwarePropertyUserSessionIsActiveOrHeadless = 'user',
    kAudioHardwarePropertyServiceRestarted = 'srst',
    kAudioHardwarePropertyPowerHint = 'powh',
    kAudioHardwarePropertyProcessObjectList = 'prs#',
    kAudioHardwarePropertyTranslatePIDToProcessObject = 'id2p',
    kAudioHardwarePropertyTapList = 'tps#',
    kAudioHardwarePropertyTranslateUIDToTap = 'uidt',
};
OSStatus AudioHardwareUnload(void) __attribute__((availability(macosx,introduced=10.1)));
OSStatus AudioHardwareCreateAggregateDevice( CFDictionaryRef inDescription,
                                    AudioObjectID* outDeviceID) __attribute__((availability(macosx,introduced=10.9)));
OSStatus AudioHardwareDestroyAggregateDevice(AudioObjectID inDeviceID) __attribute__((availability(macosx,introduced=10.9)));
enum
{
    kAudioPlugInCreateAggregateDevice = 'cagg',
    kAudioPlugInDestroyAggregateDevice = 'dagg'
};
enum
{
    kAudioTransportManagerCreateEndPointDevice = 'cdev',
    kAudioTransportManagerDestroyEndPointDevice = 'ddev'

};
typedef OSStatus
(*AudioDeviceIOProc)( AudioObjectID inDevice,
                        const AudioTimeStamp* inNow,
                        const AudioBufferList* inInputData,
                        const AudioTimeStamp* inInputTime,
                        AudioBufferList* outOutputData,
                        const AudioTimeStamp* inOutputTime,
                        void* inClientData);
typedef void
(^AudioDeviceIOBlock)( const AudioTimeStamp* inNow,
                        const AudioBufferList* inInputData,
                        const AudioTimeStamp* inInputTime,
                        AudioBufferList* outOutputData,
                        const AudioTimeStamp* inOutputTime);
typedef AudioDeviceIOProc AudioDeviceIOProcID;
enum
{
    kAudioDevicePropertyPlugIn = 'plug',
    kAudioDevicePropertyDeviceHasChanged = 'diff',
    kAudioDevicePropertyDeviceIsRunningSomewhere = 'gone',
    kAudioDeviceProcessorOverload = 'over',
    kAudioDevicePropertyIOStoppedAbnormally = 'stpd',
    kAudioDevicePropertyHogMode = 'oink',
    kAudioDevicePropertyBufferFrameSize = 'fsiz',
    kAudioDevicePropertyBufferFrameSizeRange = 'fsz#',
    kAudioDevicePropertyUsesVariableBufferFrameSizes = 'vfsz',
    kAudioDevicePropertyIOCycleUsage = 'ncyc',
    kAudioDevicePropertyStreamConfiguration = 'slay',
    kAudioDevicePropertyIOProcStreamUsage = 'suse',
    kAudioDevicePropertyActualSampleRate = 'asrt',
    kAudioDevicePropertyClockDevice = 'apcd',
    kAudioDevicePropertyIOThreadOSWorkgroup = 'oswg',
    kAudioDevicePropertyProcessMute = 'appm'
};
OSStatus
AudioDeviceCreateIOProcID( AudioObjectID inDevice,
                            AudioDeviceIOProc inProc,
                            void* inClientData,
                            AudioDeviceIOProcID * _Nonnull outIOProcID);
OSStatus
AudioDeviceCreateIOProcIDWithBlock( AudioDeviceIOProcID * _Nonnull outIOProcID,
                                    AudioObjectID inDevice,
                                    dispatch_queue_t inDispatchQueue,
                                    AudioDeviceIOBlock inIOBlock);
OSStatus
AudioDeviceDestroyIOProcID( AudioObjectID inDevice,
                            AudioDeviceIOProcID inIOProcID);
OSStatus
AudioDeviceStart( AudioObjectID inDevice,
                    AudioDeviceIOProcID inProcID);
OSStatus
AudioDeviceStartAtTime( AudioObjectID inDevice,
                        AudioDeviceIOProcID inProcID,
                        AudioTimeStamp* ioRequestedStartTime,
                        UInt32 inFlags) __attribute__((availability(macosx,introduced=10.3)));
OSStatus
AudioDeviceStop( AudioObjectID inDevice,
                    AudioDeviceIOProcID inProcID);
OSStatus
AudioDeviceGetCurrentTime( AudioObjectID inDevice,
                            AudioTimeStamp* outTime);
OSStatus
AudioDeviceTranslateTime( AudioObjectID inDevice,
                            const AudioTimeStamp* inTime,
                            AudioTimeStamp* outTime);
OSStatus
AudioDeviceGetNearestStartTime( AudioObjectID inDevice,
                                AudioTimeStamp* ioRequestedStartTime,
                                UInt32 inFlags) __attribute__((availability(macosx,introduced=10.3)));
enum
{
    kAudioSubDeviceDriftCompensationMinQuality __attribute__((availability(macos,introduced=13.0,deprecated=100000,replacement="kAudioAggregateDriftCompensationMinQuality"))) __attribute__((availability(ios,introduced=16.0,deprecated=100000,replacement="kAudioAggregateDriftCompensationMinQuality"))) = 0,
    kAudioSubDeviceDriftCompensationLowQuality __attribute__((availability(macos,introduced=13.0,deprecated=100000,replacement="kAudioAggregateDriftCompensationLowQuality"))) __attribute__((availability(ios,introduced=16.0,deprecated=100000,replacement="kAudioAggregateDriftCompensationLowQuality"))) = 0x20,
    kAudioSubDeviceDriftCompensationMediumQuality __attribute__((availability(macos,introduced=13.0,deprecated=100000,replacement="kAudioAggregateDriftCompensationMediumQuality"))) __attribute__((availability(ios,introduced=16.0,deprecated=100000,replacement="kAudioAggregateDriftCompensationMediumQuality"))) = 0x40,
    kAudioSubDeviceDriftCompensationHighQuality __attribute__((availability(macos,introduced=13.0,deprecated=100000,replacement="kAudioAggregateDriftCompensationHighQuality"))) __attribute__((availability(ios,introduced=16.0,deprecated=100000,replacement="kAudioAggregateDriftCompensationHighQuality"))) = 0x60,
    kAudioSubDeviceDriftCompensationMaxQuality __attribute__((availability(macos,introduced=13.0,deprecated=100000,replacement="kAudioAggregateDriftCompensationMaxQuality"))) __attribute__((availability(ios,introduced=16.0,deprecated=100000,replacement="kAudioAggregateDriftCompensationMaxQuality"))) = 0x7F
};
enum
{
    kAudioHardwarePropertyRunLoop = 'rnlp',
    kAudioHardwarePropertyDeviceForUID = 'duid',
    kAudioHardwarePropertyPlugInForBundleID = 'pibi',
    kAudioHardwarePropertyProcessIsMaster __attribute__((availability(macos,introduced=10.0,deprecated=12.0,replacement="kAudioHardwarePropertyProcessIsMain"))) __attribute__((availability(ios,introduced=2.0,deprecated=15.0,replacement="kAudioHardwarePropertyProcessIsMain"))) __attribute__((availability(watchos,introduced=1.0,deprecated=8.0,replacement="kAudioHardwarePropertyProcessIsMain"))) __attribute__((availability(tvos,introduced=9.0,deprecated=15.0,replacement="kAudioHardwarePropertyProcessIsMain"))) = 'mast'
};
enum
{
    kAudioAggregateDevicePropertyMasterSubDevice __attribute__((availability(macos,introduced=10.0,deprecated=12.0,replacement="kAudioAggregateDevicePropertyMainSubDevice"))) __attribute__((availability(ios,introduced=2.0,deprecated=15.0,replacement="kAudioAggregateDevicePropertyMainSubDevice"))) __attribute__((availability(watchos,introduced=1.0,deprecated=8.0,replacement="kAudioAggregateDevicePropertyMainSubDevice"))) __attribute__((availability(tvos,introduced=9.0,deprecated=15.0,replacement="kAudioAggregateDevicePropertyMainSubDevice"))) = kAudioAggregateDevicePropertyMainSubDevice
};